WifiStationExample/build/log/idf_py_stderr_output_14934
CMake Deprecation Warning at /home/ramin/ESP/esp-idf/components/mbedtls/mbedtls/CMakeLists.txt:21 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c: In function 'Task1_blink_Led':
/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c:46:9: error: called object is not a function or function pointer
   46 |         GPIO_MODE_OUTPUT(LED_PIN_1, 1);
      |         ^~~~~~~~~~~~~~~~
/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c:49:9: error: called object is not a function or function pointer
   49 |         GPIO_MODE_OUTPUT(LED_PIN_1, 0);
      |         ^~~~~~~~~~~~~~~~
/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c: At top level:
/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c:55:8: error: expected identifier or '(' before string constant
   55 | extern "C" {
      |        ^~~
/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c:23:13: warning: 'wifi_event_handler' defined but not used [-Wunused-function]
   23 | static void wifi_event_handler(void* arg, esp_event_base_t event_base,
      |             ^~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7064: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
